--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:firebeetle32]
 platform = espressif32
 board = firebeetle32
@@ -6,3 +16,8 @@ build_flags =
     -I lib/dht_espidf/include
     -I src
 monitor_speed = 115200
+
+lib_deps = 
+	0nism/ESP32-DHT11@^1.0.1
+	https://github.com/infincia/dht_espidf.git#v0.1.0
+	dht_espidf@0.0.0+20241207125259.sha.d7833f2
